# garmin-marathon-counter

./: README.md  pyproject.toml
garmin-marathon-counter/: garminconnect_demo.ipynb
